--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -37,6 +37,12 @@ layout: default
           <!-- News -->
           {%- include news.html %}
           {%- endif %}
+		  
+		  {% if page.sections -%}
+		  <!-- Section -->
+		  {% include sections.html %}
+		  {% endif %}
+		   
           {% if page.selected_papers -%}
             <!-- Selected papers -->
             {%- include selected_papers.html %}
