news and about me and section mod

--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -1,11 +1,11 @@
 <div class="educations">
   <h2>Educations</h2>
      <dl>
-  <dt>Texas A&#38;M University <dc>Aug. 2020 - present</dc> </dt>
+  <dt>Texas A&#38;M University </dt> <dc>   Aug. 2020 - present</dc> 
     <dd>Ph.D in Mechanical Engineering</dd>
-  <dt>SungKyunKwan University <dc>Sep. 2015 - Feb. 2017</dc> </dt>
+  <dt>SungKyunKwan University </dt> <dc>  Sep. 2015 - Feb. 2017</dc> 
     <dd>MS in Mechanical Engineering</dd>
-  <dt>SungKyunKwan University <dc>Mar. 2010 - Aug. 2015</dc> </dt>
+  <dt>SungKyunKwan University </dt> <dc>  Mar. 2010 - Aug. 2015</dc> 
     <dd>BS in Mechanical Engineering</dd>
 	<dd>Suma Cum Laude (1/264)</dd>
 </dl>
