--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -1,11 +1,11 @@
 <div class="educations">
   <h2>Educations</h2>
      <dl>
-  <dt>Texas A&#38;M University <span style="font-weight:normal"><dc> &nbsp &nbsp &nbsp Aug. 2020 - present</dc> </span></dt> 
+  <dt>Texas A&#38;M University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Aug. 2020 - present</dc> </span></dt> 
     <dd>Ph.D in Mechanical Engineering</dd>
-  <dt>SungKyunKwan University <span style="font-weight:normal"><dc> &nbsp &nbsp &nbsp Sep. 2015 - Feb. 2017</dc>  </span></dt> 
+  <dt>SungKyunKwan University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Sep. 2015 - Feb. 2017</dc>  </span></dt> 
     <dd>MS in Mechanical Engineering</dd>
-  <dt>SungKyunKwan University <span style="font-weight:normal"><dc> &nbsp &nbsp &nbsp Mar. 2010 - Aug. 2015</dc>   </span> </dt> 
+  <dt>SungKyunKwan University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Mar. 2010 - Aug. 2015</dc>   </span> </dt> 
     <dd>BS in Mechanical Engineering</dd>
 	<dd>Suma Cum Laude (1/264)</dd>
 </dl>
@@ -14,7 +14,7 @@
 <div class="work experience">
   <h2>Work Experience</h2>
      <dl>
-  <dt>Mando Corporation in Seongnam, Korea. <span style="font-weight:normal"> <dc> &nbsp &nbsp &nbsp Jan. 2017 - June. 2020<dc> </span> </dt>
+  <dt>Mando Corporation in Seongnam, Korea. <span style="font-weight:normal"> <dc> &nbsp; &nbsp; &nbsp; Jan. 2017 - June. 2020<dc> </span> </dt>
     <dd>I was Research Engineer developing the embedded algorithm for automotive system.</dd>
 </dl>
 </div><br>
