bib, section, news, about me, picture add

--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -16,5 +16,6 @@
      <dl>
   <dt>Mando Corporation in Seongnam, Korea. <span style="font-weight:normal"> <dc> &nbsp; &nbsp; &nbsp; Jan. 2017 - June. 2020<dc> </span> </dt>
     <dd>I was Research Engineer developing the embedded algorithm for automotive system.</dd>
+    <dd>Keyword : Vehicle dynamics, Lateral dynamics control, state estimation, embedded software</dd>
 </dl>
 </div><br>
