--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -4,7 +4,7 @@
   <dt>Texas A&#38;M University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Aug. 2020 - present</dc> </span></dt> 
     <dd>Ph.D in Mechanical Engineering</dd>
   <dt>SungKyunKwan University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Sep. 2015 - Feb. 2017</dc>  </span></dt> 
-    <dd>MS in Mechanical Engineering (advised by Emeritus Prof. Hyunsoo Kim</dd>
+    <dd>MS in Mechanical Engineering (advised by Emeritus Prof. Hyunsoo Kim)</dd>
   <dt>SungKyunKwan University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Mar. 2010 - Aug. 2015</dc>   </span> </dt> 
     <dd>BS in Mechanical Engineering</dd>
 	<dd>Suma Cum Laude (1/264)</dd>
