--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -5,9 +5,10 @@
     <dd>Ph.D in Mechanical Engineering</dd>
   <dt>SungKyunKwan University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Sep. 2015 - Feb. 2017</dc>  </span></dt> 
     <dd>MS in Mechanical Engineering (advised by Emeritus Prof. Hyunsoo Kim)</dd>
+	<dd>Thesis : Development of Clutch Control for Torque Vectoring Differential to Enhance Vehicle Handling Performance</dd>
   <dt>SungKyunKwan University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Mar. 2010 - Aug. 2015</dc>   </span> </dt> 
     <dd>BS in Mechanical Engineering</dd>
-	<dd>Suma Cum Laude (1/264)</dd>
+	<dd>Summa Cum Laude (1/264)</dd>
 </dl>
 </div><br>
 
@@ -16,6 +17,6 @@
      <dl>
   <dt>Mando Corporation in Seongnam, Korea. <span style="font-weight:normal"> <dc> &nbsp; &nbsp; &nbsp; Jan. 2017 - June. 2020<dc> </span> </dt>
     <dd>I was Research Engineer developing the embedded algorithm for automotive system.</dd>
-    <dd>Keyword : Vehicle dynamics, Lateral dynamics control, state estimation, embedded software</dd>
+    <dd>Keyword : Vehicle dynamics, Lateral dynamics control, state estimation, embedded software, Software engineering</dd>
 </dl>
 </div><br>
