--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -14,9 +14,14 @@
 
 <div class="work experience">
   <h2>Work Experience</h2>
+      <dl>
+  <dt>Tesla in Austin, TX. <span style="font-weight:normal"> <dc> &nbsp; &nbsp; &nbsp; May. 2023 - Aug. 2023<dc> </span> </dt>
+    <dd>Engineering intern, developing machine learning models for image classification and decision making.</dd>
+    <dd>Keyword : Image processing, machine learning, vision inspection for battery cell</dd>
+</dl> 
      <dl>
   <dt>Mando Corporation in Seongnam, Korea. <span style="font-weight:normal"> <dc> &nbsp; &nbsp; &nbsp; Jan. 2017 - June. 2020<dc> </span> </dt>
-    <dd>I was Research Engineer developing the embedded algorithm for automotive system.</dd>
+    <dd>Research Engineer, developing the embedded algorithm for automotive system.</dd>
     <dd>Keyword : Vehicle dynamics, Lateral dynamics control, state estimation, embedded software, Software engineering</dd>
 </dl>
 </div><br>
