--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -1,7 +1,7 @@
 <div class="educations">
   <h2>Educations</h2>
      <dl>
-  <dt>Texas A&#38;M University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Aug. 2020 - present</dc> </span></dt> 
+  <dt>Texas A&#38;M University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Aug. 2020 - May. 2024</dc> </span></dt> 
     <dd>Ph.D in Mechanical Engineering</dd>
   <dt>SungKyunKwan University <span style="font-weight:normal"><dc> &nbsp; &nbsp; &nbsp; Sep. 2015 - Feb. 2017</dc>  </span></dt> 
     <dd>MS in Mechanical Engineering (advised by Emeritus Prof. Hyunsoo Kim)</dd>
